kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hangar-maven-bridge
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: hangar-maven-bridge
  type: ClusterIP
