kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hangar-maven-bridge
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    traefik.ingress.kubernetes.io/router.middlewares: mc-web-services-hangar-maven-bridge-basic-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - hangar-maven-bridge.prodrivers.fr
      secretName: tls-hangar-maven-bridge
  rules:
    - host: hangar-maven-bridge.prodrivers.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hangar-maven-bridge
                port:
                  name: http
